# agent-copilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_spec.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/macos/: Package.swift
crates/adapters/: Cargo.toml
crates/adapters/fuzz/: Cargo.toml
crates/adapters/fuzz/fuzz_targets/: frontmatter_parser.rs
crates/ai-core/: Cargo.toml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs  mapping.rs  queries.rs  refresh.rs  schema.rs
crates/catalog/src/migrations/: 0001_initial.sql  0002_add_display_path.sql  0003_add_rule_findings.sql  0004_add_finding_triage.sql  0005_add_rule_tuning.sql
crates/commands/: Cargo.toml
crates/commands/src/: analysis.rs  config_support.rs  lib.rs  script_execution.rs  skill_manager.rs  tests.rs
crates/core/: Cargo.toml
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: cleanup_queue.rs  lib.rs  main.rs  project_context.rs  protocol.rs  provider.rs  service_cleanup.rs  service_evidence.rs  service_guided_cleanup_helpers.rs  service_host.rs  service_knowledge.rs  service_knowledge_helpers.rs  service_llm.rs  service_llm_prompt_helpers.rs  service_observability_helpers.rs  service_remediation.rs  service_remediation_helpers.rs  service_support_helpers.rs  service_task.rs  service_task_helpers.rs  tests.rs
crates/service/src/tests/: benchmarks.rs  dispatch_fixtures.rs  llm_provider.rs  local_session_preview.rs  local_session_project_scope.rs  protocol_fixtures.rs  remediation_workspace.rs  skill_manager_fixtures.rs  support_and_status.rs  support_seed.rs  task_cockpit_routing.rs  task_routing.rs
docs/: agent-adapter-spec-worklists.md  agent-adapters.md  agent-copilot-v2.87-implementation-design-2026-06-16.md  ai-agent-workflow.md  ai-layer.md  architecture.md  benchmark-trends.md  codex-adapter-spec.md  data-model.md  deprecated-web-ui-removal.md  development-tasks.md  distribution-runbook.md  hermes-adapter-spec.md  macos-app-runbook.md  macos-native-plan.md  merged-review-optimizations-2026-06-16.md  mvp-implementation-plan.md  openclaw-adapter-spec.md  opencode-adapter-spec.md  pi-adapter-spec.md  real-local-app-audit-2026-06-15.md  release-checklist.md  roadmap.md  security-model.md  service-protocol.md  ui-delivery-standards.md  ui-global-optimization-plan.md  ui-optimization-skills-manager.md  v2.41-verification-checklist.md  v2.42-verification-checklist.md  v2.43-verification-checklist.md  v2.44-verification-checklist.md  v2.45-verification-checklist.md  v2.65-verification-checklist.md  v2.66-verification-checklist.md  v2.67-verification-checklist.md  v2.68-verification-checklist.md  v2.69-verification-checklist.md  v2.70-verification-checklist.md  v2.71-verification-checklist.md  (+20 more)
docs/adapters/: agent-adapters.md  codex-adapter-spec.md  hermes-adapter-spec.md  openclaw-adapter-spec.md  opencode-adapter-spec.md  pi-adapter-spec.md
docs/plans/: development-tasks.md  roadmap.md
docs/runbooks/: distribution-runbook.md  macos-app-runbook.md  (+1 more)
script/: build_and_run.sh  capture_app_window.sh  check_privacy.sh  generate_app_icon.sh
scripts/: benchmark-10k.mjs  benchmark-knowledge-search.mjs  benchmark-native-list-model.mjs  benchmark-routing.mjs  benchmark-task-readiness.mjs  check-macos.mjs  classify-validation-blocker.mjs  smoke-macos-app.mjs  test-macos-native-models.sh  test-native-list-model.mjs  validation-blockers.mjs  verify-benchmark-trends.mjs  verify-doc-governance.mjs  verify-js-syntax.mjs  verify-module-size.mjs  verify-native-ui-layout.mjs  verify-pi-writable-evidence-fixtures.mjs  verify-screenshot-artifacts.mjs  verify-service-protocol-drift.mjs  verify-v2-73-validation-docs.mjs  verify-v2-74-validation-docs.mjs  verify-v2-75-validation-docs.mjs  verify-v2-76-validation-docs.mjs  verify-v2-77-validation-docs.mjs  verify-v2-78-validation-docs.mjs  verify-v2-79-validation-docs.mjs  verify-v2-80-validation-docs.mjs  verify-v2-81-validation-docs.mjs  verify-v2-82-validation-docs.mjs  verify-v2-83-validation-docs.mjs  verify-v2-84-validation-docs.mjs  verify-v2-85-validation-docs.mjs  verify-v2-86-validation-docs.mjs  verify-validation-blockers.mjs  verify-version-validation-docs.mjs
(+476 files in other folders)
