[package]
name = "skills-copilot-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
skills-copilot-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
skills-copilot-adapters.workspace = true
