[package]
name = "skills-copilot-commands"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fs4.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
skills-copilot-adapters.workspace = true
skills-copilot-ai-core.workspace = true
skills-copilot-catalog.workspace = true
skills-copilot-core.workspace = true
skills-copilot-scanner.workspace = true
thiserror.workspace = true
