[package]
name = "skills-copilot-scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
json5.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
sha2.workspace = true
skills-copilot-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
skills-copilot-adapters.workspace = true
