[package]
name = "skills-copilot-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
skills-copilot-catalog.workspace = true
skills-copilot-commands.workspace = true
skills-copilot-core.workspace = true

[[bin]]
name = "skills-copilot-service"
path = "src/main.rs"
